--- a/Hello World/style.css
+++ b/Hello World/style.css
@@ -1,20 +1,24 @@
 .btn-3d {
-    font-family: 'Courier New', Courier, monospace;
-    height: 60px;
-    width: 300px;
-    border-radius: 20px;
-    background-color: #000;
-    color: #fff;
-    font-size: 1rem;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    transition: .5s;
-    box-shadow: 0 6px 0 #bb1542;
+  font-family: "Courier New", Courier, monospace;
+  height: 60px;
+  width: 300px;
+  border-radius: 20px;
+  background-color: #000;
+  color: #fff;
+  font-size: 1rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  transition: 0.3s ease;
+  box-shadow: 0 6px 0 #444;
+}
+
+.btn-3d:hover {
+  background-color: #444; /* cor de fundo mais clara no hover */
+  box-shadow: 0 8px 0 #333;
 }
 
 .btn-3d:active {
-    box-shadow: none;
-    transform: translateY(6px);
-
+  box-shadow: 0 4px 0 #222;
+  transform: translateY(4px); /* efeito de clique */
 }
